trying php round 2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 -->
 <html>
 <head>
+<script type="text/javascript" language="javascript" src="contactform/contactform.nocache.js"></script>
+<script>
+			contactform_ok = "Thank you! The message has been sent.";
+			contactform_error = "Ooops! Something has gone wrong. Try again later, or attempt to contact me via DM on Twitter or Linkedin (links in profile)";
+			contactform_message_appearance_interval = "1000";
+			contactform_message_wait_interval = "1000";
+			contactform_message_disappearance_interval = "1000";
+</script>
+
                 <script src="https://kit.fontawesome.com/94bab2e8e6.js" crossorigin="anonymous"></script> 
 		<title>Katelyn N. Allers</title>
 		<meta charset="utf-8" />
