--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 -->
 <html>
 <head>
-<script type="text/javascript" language="javascript" src="contactform/contactform.nocache.js"></script>
+<!--<script type="text/javascript" language="javascript" src="contactform/contactform.nocache.js"></script>
 <script>
 			contactform_ok = "Thank you! The message has been sent.";
 			contactform_error = "Ooops! Something has gone wrong. Try again later, or attempt to contact me via DM on Twitter or Linkedin (links in profile)";
 			contactform_message_appearance_interval = "1000";
 			contactform_message_wait_interval = "1000";
 			contactform_message_disappearance_interval = "1000";
+</script>-->
+<!-- webform.pw -->
+<script> web_form_id = "bb475cae-6adc-44b8-a536-770ef90f12d5" </script>
+<script type="text/javascript"
+    src="https://webform.pw/client/formclient.nocache.js">
 </script>
 
                 <script src="https://kit.fontawesome.com/94bab2e8e6.js" crossorigin="anonymous"></script> 
